crates/uitest/fixtures/mir_check/match_pattern_mut_borrow_copy_alias.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/match_pattern_mut_borrow_copy_alias.fe
---
error[11-0002]: borrow conflict in `fn match_pattern_mut_borrow_copy_alias`
  ┌─ match_pattern_mut_borrow_copy_alias.fe:6:9
  │
6 │     let mut foo: Foo = Foo { x: 1 }
  │         ^^^^^^^ access overlaps an active `mut` borrow
